--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@ header {
   background-color: #000000;
   text-align: center;
   padding-top: 5vh;
+  float: left;
 
 }
 ul {
@@ -29,5 +30,14 @@ a {
   font-size: 20px;
   text-decoration: none;
   color: #FFFFFF;
+
+}
+#Background {
+  background-color: #000000;
+  width: 80%;
+  height: 50vh;
+  float: left;
+  margin-left: 10%;
+  margin-right: 10%;
 
 }
