--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,34 +10,38 @@ header {
   text-align: center;
   padding-top: 5vh;
   float: left;
+  position: fixed;
 
 }
 ul {
   list-style-type: none;
   width: 100%;
   height: 50%;
-
-
 }
 li {
   display: inline-block;
   margin-left: 10%;
   margin-right: 10%;
-
 }
-
 a {
   font-size: 20px;
   text-decoration: none;
   color: #FFFFFF;
-
 }
 #Background {
   background-color: #000000;
   width: 80%;
-  height: 50vh;
+  height: 90vh;
   float: left;
   margin-left: 10%;
   margin-right: 10%;
 
+}
+#Base-Group {
+  background-color: #000000;
+  width: 80%;
+  height: 80vh;
+  float: left;
+  margin-left: 10%;
+  margin-right: 10%;
 }
