--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,28 +13,19 @@ header {
   position: fixed;
 
 }
-ul {
-  list-style-type: none;
-  width: 100%;
-  height: 50%;
-}
-li {
-  display: inline-block;
-  margin-left: 10%;
-  margin-right: 10%;
-}
 a {
   font-size: 20px;
   text-decoration: none;
   color: #FFFFFF;
 }
-#Background {
+#ProjectPlan {
   background-color: #000000;
   width: 80%;
   height: 90vh;
   float: left;
   margin-left: 10%;
   margin-right: 10%;
+  margin-top:15vh;
 
 }
 #Base-Group {
@@ -44,4 +35,50 @@ a {
   float: left;
   margin-left: 10%;
   margin-right: 10%;
+}
+
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #f48942;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #e37831}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #e37831;
 }
