--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,6 @@ header {
   background-color: #000000;
   text-align: center;
   padding-top: 5vh;
-  float: left;
   position: fixed;
 
 }
@@ -18,8 +17,12 @@ a {
   text-decoration: none;
   color: #FFFFFF;
 }
-#ProjectPlan {
-  background-color: #000000;
+h1#title{
+  margin-top:-2vh;
+  color: #ffffff;
+}
+.section {
+  background-color: #ffffff;
   width: 80%;
   height: 90vh;
   float: left;
@@ -27,6 +30,13 @@ a {
   margin-right: 10%;
   margin-top:15vh;
 
+}
+.offset:before {
+	display: block;
+ 	content: " ";
+  height: 90vh;      /* Give height of your fixed element */
+  margin-top: -75vh; /* Give negative margin of your fixed element */
+  visibility: hidden;
 }
 #Base-Group {
   background-color: #000000;
@@ -37,32 +47,30 @@ a {
   margin-right: 10%;
 }
 
-
-/* Dropdown Button */
 .dropbtn {
     background-color: #f48942;
-    padding: 16px;
+    padding: 14px;
     border: none;
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
+    float: right;
+    margin-right: 10vw;
+    margin-top:-10vh;
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
-    position: relative;
+    position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -70,15 +78,12 @@ a {
     display: block;
 }
 
-/* Change color of dropdown links on hover */
+
 .dropdown-content a:hover {background-color: #e37831}
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: #e37831;
 }
